--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,18 @@
   "dependencies": {
     "@google/generative-ai": "^0.2.1",
     "@headlessui/react": "^1.7.18",
+    "@radix-ui/react-alert-dialog": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "firebase": "^10.8.0",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.2"
+    "react-router-dom": "^6.22.2",
+    "styled-jsx": "^5.1.6",
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
