--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,9 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.2",
     "styled-jsx": "^5.1.6",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.0",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
