--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,12 +25,12 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.2",
     "styled-jsx": "^5.1.6",
-    "tailwind-merge": "^3.2.0",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.10"
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/file-saver": "^2.0.7",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
